--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@ body {
 #terminal input {
   background-color: transparent;
   font-size: 1em;
-  color: #4cd711;
   font-family: monospace;
   border: none;
   outline: none;
@@ -42,8 +41,8 @@ body {
 }
 
 #input {
+  margin-top: 1em;
   width: 100%;
-  border-bottom: 1px solid #4cd711;
 }
 
 @keyframes typing {
@@ -69,36 +68,47 @@ body {
   justify-content: space-between;
 }
 
+.flex-start {
+  justify-content: flex-start;
+}
+
 .column {
   flex-direction: column;
 }
 
-#main-terminal {
+#terminal-nav {
   border-bottom: 1px solid #4cd711;
 }
 
-
-#main-terminal ul {
+#terminal-nav ul {
   list-style-type: none;
   padding: 0;
   display: inline-block;
   margin: 0;
 }
 
-#main-terminal li p {
+#terminal-nav li p {
   font-size: 1.5em;
   margin: 0;
   padding-bottom: 12px;
 }
 
-#main-terminal li p::before {
+#terminal-nav li p::before {
   content: " ";
   margin-right: 0.5em;
 }
 
-#main-terminal li p.selected::before {
+#terminal-nav li p.selected::before {
   content: ">";
   color: #4cd711;
   margin-right: 0.5em;
 }
 
+.white {
+  color: #ffffff;
+}
+
+#terminal-output {
+  /* overflow-y: scroll;
+  height: 100vh; */
+}
